--- a/index.html
+++ b/index.html
@@ -25,25 +25,27 @@
         justify-content: center;
       }
       .box {
-        background: rgb(18, 19, 18);
-        width: 50px;
-        height: 50px;
+        background-color: rgb(114, 114, 114);
+        width: 80px;
+        height: 80px;
         margin: 0 5px;
         border-radius: 10%;
       }
       h6 {
+        font-size: 15px;
         text-align: center;
+        font-family: sans-serif;
         padding-top: 2px;
-        color: blanchedalmond;
-        padding-top: 8px;
+        color: rgb(255, 255, 255);
+        padding-top: 13px;
       }
       .box h1 {
-        font-size: 20px;
+        font-size: 30px;
         text-align: center;
         font-family: sans-serif;
         font-weight: 800;
         margin-bottom: 15px;
-        color: blanchedalmond;
+        color: rgb(255, 255, 255);
       }
       .alert {
         display: none;
