feat(fonologi): add competency map

--- a/material.html
+++ b/material.html
@@ -23,13 +23,13 @@
                     <a class="nav-link text-black" href="index.html">Beranda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="#introduction">Pendahuluan</a>
+                    <a class="nav-link text-black" href="about.html">Pendahuluan</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="#instruction">Petunjuk</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="#material">Materi</a>
+                    <a class="nav-link text-black" href="material.html">Materi</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="about.html">Tentang</a>
