--- a/introduction.html
+++ b/introduction.html
@@ -26,10 +26,10 @@
                     <a class="nav-link text-black" href="introduction.html">Pendahuluan</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="#instruction">Petunjuk</a>
+                    <a class="nav-link text-black" href="">Petunjuk</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="#material">Materi</a>
+                    <a class="nav-link text-black" href="material.html">Materi</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="about.html">Tentang</a>
