--- a/pages/competency-map.html
+++ b/pages/competency-map.html
@@ -20,19 +20,19 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="index.html">Beranda</a>
+                    <a class="nav-link text-black" href="pages/index.html">Beranda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="introduction.html">Pendahuluan</a>
+                    <a class="nav-link text-black" href="pages/introduction.html">Pendahuluan</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="">Petunjuk</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="material.html">Materi</a>
+                    <a class="nav-link text-black" href="pages/material.html">Materi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="about.html">Tentang</a>
+                    <a class="nav-link text-black" href="pages/about.html">Tentang</a>
                 </li>
             </ul>
         </div>
