feat(fonologi): fix typo

--- a/material.html
+++ b/material.html
@@ -127,7 +127,7 @@
                             <h3 class="card-title">Unit 5 Kegiatan Sehari-hari</h3>
                             <p class="card-text">
                             <ol type="a" class="px-3">
-                                <li>SPengenalan kosakata kegiatan sehari-hari</li>
+                                <li>Pengenalan kosakata kegiatan sehari-hari</li>
                                 <br>
                                 <li>Pasangan minimal</li>
                                 <br>
