--- a/competency-map.html
+++ b/competency-map.html
@@ -26,7 +26,7 @@
                     <a class="nav-link text-black" href="introduction.html">Pendahuluan</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="">Petunjuk</a>
+                    <a class="nav-link text-black" href="guideline.html">Petunjuk</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="material.html">Materi</a>
