feat(fonologi): fix typo

--- a/material.html
+++ b/material.html
@@ -47,7 +47,7 @@
                             <h3 class="card-title">Unit 1 Perkenalan</h3>
                             <p class="card-text">
                             <ol type="a" class="px-3">
-                                <li>Simakan kosakata sapaan dan perkenalan</li>
+                                <li>Penganalan kosakata sapaan dan perkenalan</li>
                                 <br>
                                 <li>Pasangan minimal</li>
                                 <br>
@@ -89,7 +89,7 @@
                             <h3 class="card-title">Unit 3 Hari dan Tanggal</h3>
                             <p class="card-text">
                             <ol type="a" class="px-3">
-                                <li>Simakan kosakata hari dan tanggal</li>
+                                <li>Pengalan kosakata hari dan tanggal</li>
                                 <br>
                                 <li>Pasangan minimal kata tentang hari dan tanggal</li>
                                 <br>
