feat(fonologi): unit 1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/essentials.css">
     <link rel="stylesheet" href="assets/css/layout.css">
+    <style>
+        body  {
+            background-image: url("assets/images/Halaman\ Beranda.png");
+            background-size: cover;
+        }
+    </style>
 </head>
 
 <body>
@@ -49,10 +55,10 @@
                     </p>
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="competency-map.html"><button type="button" class="btn btn-outline-custom">Peta Kompetensi</button></a>
+                            <a href="competency-map.html"><button type="button" class="btn btn-primary">Peta Kompetensi</button></a>
                         </div>
                         <div class="col-md-4">
-                            <a href="preactivity.html"><button type="button" class="btn btn-outline-custom">Prakegiatan</button></a>
+                            <a href="preactivity.html"><button type="button" class="btn btn-primary">Prakegiatan</button></a>
                         </div>
                     </div>
                 </div>
