feat(fonologi): fix speect to text

--- a/unit-1.html
+++ b/unit-1.html
@@ -386,7 +386,7 @@
                         <button id="startBtnAct5" class="btn btn-primary mr-20">
                           <span> Start Recording </span>
                         </button>
-                        <button id="cleanUpBtnAct5" class="btn btn-secondary mr-20" disabled>Bersihkan</button>
+                        <button id="stopBtnAct5" class="btn btn-secondary" disabled>Stop Recording</button>
                       </div>
                       <div id="resultAct5" class="result"></div>
                 </div>
