feat(fonologi): add missing audio

--- a/unit-1.html
+++ b/unit-1.html
@@ -344,6 +344,7 @@
                         Kegiatan 1. Simak dan ikuti percakapan berikut dengan cara berbisik!
                         <br>아래 대화를 주의 깊게 들어보고 따라하세요!
                     </h4>
+                    <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act51()">
                     <table>
                         <tbody>
                             <tr>
@@ -501,6 +502,12 @@
         }
         function act45(){
             var music = new Audio('assets/audio/Unit 1/Unit 1.D. 5.m4a');
+            music.play();
+        }
+
+        // Activity - 5
+        function act51(){
+            var music = new Audio('assets/audio/Unit 1/Unit 1.E. Percakapan.m4a');
             music.play();
         }
     </script>
