feat(fonologi): unit 2

--- a/material.html
+++ b/material.html
@@ -64,26 +64,28 @@
                     </a>
                 </div>
                 <div class="col-md-3">
-                    <div class="card h-500">
-                        <div class="card-body">
-                            <h3 class="card-title">Unit 2 Pekerjaan</h3>
-                            <p class="card-text">
-                            <ol type="a" class="px-3">
-                                <li>Pengenalan kosakata tentang pekerjaan</li>
-                                <br>
-                                <li>Pasangan minimal tentang pekerjaan</li>
-                                <br>
-                                <li>Kalimat <i>tongue twister</i></li>
-                                <br>
-                                <li>Kalimat sederhana tentang pekerjaan</li>
-                                <br>
-                                <li>Kalimat kompleks tentang pekerjaan</li>
-                                <br>
-                                <li>Percakapan sederhana tentang pekerjaan</li>
-                            </ol>
-                            </p>
+                    <a href="unit-2.html" class="text-black">
+                        <div class="card h-500">
+                            <div class="card-body">
+                                <h3 class="card-title">Unit 2 Pekerjaan</h3>
+                                <p class="card-text">
+                                <ol type="a" class="px-3">
+                                    <li>Pengenalan kosakata tentang pekerjaan</li>
+                                    <br>
+                                    <li>Pasangan minimal tentang pekerjaan</li>
+                                    <br>
+                                    <li>Kalimat <i>tongue twister</i></li>
+                                    <br>
+                                    <li>Kalimat sederhana tentang pekerjaan</li>
+                                    <br>
+                                    <li>Kalimat kompleks tentang pekerjaan</li>
+                                    <br>
+                                    <li>Percakapan sederhana tentang pekerjaan</li>
+                                </ol>
+                                </p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
                     <div class="card h-500">
