--- a/material.html
+++ b/material.html
@@ -88,22 +88,24 @@
                     </a>
                 </div>
                 <div class="col-md-3">
-                    <div class="card h-500">
-                        <div class="card-body">
-                            <h3 class="card-title">Unit 3 Hari dan Tanggal</h3>
-                            <p class="card-text">
-                            <ol type="a" class="px-3">
-                                <li>Pengalan kosakata hari dan tanggal</li>
-                                <br>
-                                <li>Pasangan minimal kata tentang hari dan tanggal</li>
-                                <br>
-                                <li>Kalimat sederhana mengenai hari dan tanggal</li>
-                                <br>
-                                <li>Kalimat kompleks mengenai hari dan tanggal</li>
-                            </ol>
-                            </p>
+                    <a href="unit-3.html" class="text-black">
+                        <div class="card h-500">
+                            <div class="card-body">
+                                <h3 class="card-title">Unit 3 Hari dan Tanggal</h3>
+                                <p class="card-text">
+                                <ol type="a" class="px-3">
+                                    <li>Pengalan kosakata hari dan tanggal</li>
+                                    <br>
+                                    <li>Pasangan minimal kata tentang hari dan tanggal</li>
+                                    <br>
+                                    <li>Kalimat sederhana mengenai hari dan tanggal</li>
+                                    <br>
+                                    <li>Kalimat kompleks mengenai hari dan tanggal</li>
+                                </ol>
+                                </p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
                     <div class="card h-500">
