--- a/unit-1.html
+++ b/unit-1.html
@@ -384,12 +384,12 @@
                         <br>위의 친구나 선생님과의 대화를 흉내내고 자신의 경험에 맞게 수정해보세요!
                     </h4>
                     <div class="btn-wrapper">
-                        <button id="startBtnAct6" class="btn btn-primary mr-20">
+                        <button id="startBtnDialogue" class="btn btn-primary mr-20">
                           <span> Start Recording </span>
                         </button>
-                        <button id="stopBtnAct6" class="btn btn-secondary" disabled>Stop Recording</button>
+                        <button id="stopBtnDialogue" class="btn btn-secondary" disabled>Stop Recording</button>
                       </div>
-                      <div id="resultAct6" class="result"></div>
+                      <div id="resultDialogue" class="result"></div>
                 </div>
             </div>
         </div>
@@ -514,7 +514,7 @@
     <script src="assets/js/speech-to-text-act-2.js"></script>
     <script src="assets/js/speech-to-text-act-3.js"></script>
     <script src="assets/js/speech-to-text-act-4.js"></script>
-    <script src="assets/js/speech-to-text-act-6.js"></script>
+    <script src="assets/js/speech-to-text-dialogue.js"></script>
 </body>
 
 </html>
