--- a/guideline.html
+++ b/guideline.html
@@ -13,57 +13,68 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <h3 class="mb-0 text-black opacity-9">Bahan Ajar Fonologi</h3>
+        <h3 class="mb-0 text-black opacity-9" id="navTitle"></h3>
         <button class="navbar-toggler" id="solidColor" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="index.html">Beranda</a>
+                    <a class="nav-link text-black" href="index.html" id="home"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="introduction.html">Pendahuluan</a>
+                    <a class="nav-link text-black" href="introduction.html" id="introduction"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="guideline.html">Petunjuk</a>
+                    <a class="nav-link text-black" href="guideline.html" id="guideline"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="material.html">Materi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="about.html">Tentang</a>
+                    <a class="nav-link text-black" href="about.html" id="about"></a>
                 </li>
             </ul>
         </div>
     </nav>
     <section id="about">
         <div class="container mt-100">
-            <h1 class="text-center">Petunjuk Penggunaan</h1>
+            <div class="mt-120 pl-0 ml-0">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Pilih Bahasa
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#" onclick="setLanguage('id')"><img class="w-20" src="assets/images/icon/indonesia.png" alt=""> Indonesia</a>
+                      <a class="dropdown-item" href="#" onclick="setLanguage('ko')"><img class="w-20" src="assets/images/icon/south-korea.png" alt=""> Korea</a>
+                    </div>
+                  </div>
+            </div>
+            <h1 class="text-center" id="guidelineTitle"></h1>
             <div class="row">
                 <div class="col-md-6">
                     <table class="table table-bordered">
                         <thead class="w-50">
                           <tr>
-                            <th scope="col">Bagi Pembelajar BIPA</th>
+                            <th scope="col" id="guidelineTable1Title"></th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr>
                             <td>
                                 <ol type="1">
-                                    <li>Buka website “Fonologi Bahasa Indonesia bagi Pemelajar BIPA”</li>
-                                    <li>Tekan fitur “Peta Kompetensi” untuk memelihat refleksi kompetensi</li>
-                                    <li>Tekan fitur “Pasangan Minimal” untuk latihan</li>
-                                    <li>Tekan fitur “Materi” untuk melihat semua materi</li>
-                                    <li>Pelajari materi dari “Unit” 1 hingga “Evaluasi Akhir”</li>
-                                    <li>Bacalah teks yang disajikan secara seksama</li>
-                                    <li>Perhatikan gambar-gambar dan transkripsi fonetik yang disediakan</li>
-                                    <li>Dengarkan audio yang disajikan secara seksama</li>
-                                    <li>Simak dan pahami bunyi pelafalan pasangan minimal yang disajikan</li>
-                                    <li>Ikuti pelafalan bunyi setiap kata yang disajikan</li>
-                                    <li>Bandingkan pelafalan Anda dengan audio yang disediakan</li>
-                                    <li>Lakukan latihan pelafalan secara berulang-ulang dengan fitur speech-to-text yang disediakan</li>
+                                    <li id="guidelineTable11"></li>
+                                    <li id="guidelineTable12"></li>
+                                    <li id="guidelineTable13"></li>
+                                    <li id="guidelineTable14"></li>
+                                    <li id="guidelineTable15"></li>
+                                    <li id="guidelineTable16"></li>
+                                    <li id="guidelineTable17"></li>
+                                    <li id="guidelineTable18"></li>
+                                    <li id="guidelineTable19"></li>
+                                    <li id="guidelineTable110"></li>
+                                    <li id="guidelineTable111"></li>
+                                    <li id="guidelineTable112"></li>
                                 </ol>
                             </td>
                           </tr>
@@ -74,21 +85,20 @@
                     <table class="table table-bordered">
                         <thead class="w-50">
                           <tr>
-                            <th scope="col">Bagi Pengjar BIPA</th>
+                            <th scope="col" id="guidelineTable2Title"></th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr>
                             <td>
                                 <ol type="1">
-                                    <li>Bagikan tautan website “Fonologi Bahasa Indonesia bagi Pemelajar BIPA” kepada pemelajar</li>
-                                    <li>Berikan instruksi kepada pemelajar untuk membaca teks yang disajikan secara seksama</li>
-                                    <li>Berikan instruksi kepada pemelajar untuk memperhatikan gambar-gambar dan transkripsi fonetik yang disediakan</li>
-                                    <li>Berikan instruksi kepada pemelajar untuk mengarkan audio yang disajikan secara seksama</li>
-                                    <li>Berikan instruksi kepada pemelajar untuk menyimak dan memahami bunyi pelafalan pasangan minimal yang disajikan</li>
-                                    <li>Berikan instruksi kepada pemelajar untuk mengikuti pelafalan bunyi setiap kata yang disajikan </li>
-                                    <li>Bersama dengan pemalajar membandingkan pelafalan pemelajar dengan audio yang disediakan</li>
-                                    <li>Berikan instruksi kepada pemelajar untuk melakukan latihan pelafalan secara berulang-ulang dengan fitur speech-to-text yang disediakan. </li>
+                                    <li id="guidelineTable21"></li>
+                                    <li id="guidelineTable22"></li>
+                                    <li id="guidelineTable23"></li>
+                                    <li id="guidelineTable24"></li>
+                                    <li id="guidelineTable25"></li>
+                                    <li id="guidelineTable26"></li>
+                                    <li id="guidelineTable27"></li>
                                 </ol>
                             </td>
                           </tr>
@@ -99,10 +109,44 @@
         </div>
     </section>
 
-    <script src="https://kit.fontawesome.com/3bc2e700df.js"></script>
-    <script src="<assets/js/jquery-3.5.1.min.js"></script>
-    <script src="<assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/localize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+    <script>
+        function updateContent(translations) {
+            document.getElementById('navTitle').innerText = translations.navTitle;
+            document.getElementById('home').innerText = translations.home;
+            document.getElementById('introduction').innerText = translations.introduction;
+            document.getElementById('guideline').innerText = translations.guideline;
+            document.getElementById('about').innerText = translations.about;
+            
+            
+            document.getElementById('guidelineTitle').innerText = translations.guidelineTitle;
+            document.getElementById('guidelineTable1Title').innerText = translations.guidelineTable1Title;
+            document.getElementById('guidelineTable11').innerText = translations.guidelineTable11;
+            document.getElementById('guidelineTable12').innerText = translations.guidelineTable12;
+            document.getElementById('guidelineTable13').innerText = translations.guidelineTable13;
+            document.getElementById('guidelineTable14').innerText = translations.guidelineTable14;
+            document.getElementById('guidelineTable15').innerText = translations.guidelineTable15;
+            document.getElementById('guidelineTable16').innerText = translations.guidelineTable16;
+            document.getElementById('guidelineTable17').innerText = translations.guidelineTable17;
+            document.getElementById('guidelineTable18').innerText = translations.guidelineTable18;
+            document.getElementById('guidelineTable19').innerText = translations.guidelineTable19;
+            document.getElementById('guidelineTable110').innerText = translations.guidelineTable110;
+            document.getElementById('guidelineTable111').innerText = translations.guidelineTable111;
+            document.getElementById('guidelineTable112').innerText = translations.guidelineTable112;
+
+            document.getElementById('guidelineTable2Title').innerText = translations.guidelineTable2Title;
+            document.getElementById('guidelineTable21').innerText = translations.guidelineTable21;
+            document.getElementById('guidelineTable22').innerText = translations.guidelineTable22;
+            document.getElementById('guidelineTable23').innerText = translations.guidelineTable23;
+            document.getElementById('guidelineTable24').innerText = translations.guidelineTable24;
+            document.getElementById('guidelineTable25').innerText = translations.guidelineTable25;
+            document.getElementById('guidelineTable26').innerText = translations.guidelineTable26;
+            document.getElementById('guidelineTable27').innerText = translations.guidelineTable27;
+        }
+    </script>
 </body>
 
 </html>
