--- a/index.html
+++ b/index.html
@@ -19,56 +19,75 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <h3 class="mb-0 text-black opacity-9">Bahan Ajar Fonologi</h3>
+        <h3 class="mb-0 text-black opacity-9" id="navTitle"></h3>
         <button class="navbar-toggler" id="solidColor" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="index.html">Beranda</a>
+                    <a class="nav-link text-black" href="index.html" id="home"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="introduction.html">Pendahuluan</a>
+                    <a class="nav-link text-black" href="introduction.html" id="introduction"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="guideline.html">Petunjuk</a>
+                    <a class="nav-link text-black" href="guideline.html" id="guideline"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="material.html">Materi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="about.html">Tentang</a>
+                    <a class="nav-link text-black" href="about.html" id="about"></a>
                 </li>
             </ul>
         </div>
     </nav>
     <section id="home">
         <div class="container">
-            <div class="row mt-100 pt-100">
-                <div class="col-md-6 p-0">
-                    <h1 class="m-0 text-black text-left opacity-8" style="font-weight: 900;">
-                        Fonologi Bahasa Indonesia Bagi Pembelajar BIPA
-                    </h1>
-                    <p class="pt-50">
-                        Bahan ajar fonologi bagi pembelajar BIPA Korea
-                    </p>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <a href="competency-map.html"><button type="button" class="btn btn-primary">Peta Kompetensi</button></a>
+            <div class="mt-120 pl-0 ml-0">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Pilih Bahasa
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#" onclick="setLanguage('id')"><img class="w-20" src="assets/images/icon/indonesia.png" alt=""> Indonesia</a>
+                      <a class="dropdown-item" href="#" onclick="setLanguage('ko')"><img class="w-20" src="assets/images/icon/south-korea.png" alt=""> Korea</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="row pt-50">
+                <div class="col-md-7 pl-15">
+                    <h1 class="m-0 text-black text-left opacity-8" style="font-weight: 900;" id="indexTitle"></h1>
+                    <div class="row mt-30">
+                        <div class="col-md-3">
+                            <a href="competency-map.html"><button type="button" class="btn btn-primary"><span id="competencyMap"></span></button></a>
                         </div>
-                        <div class="col-md-4">
-                            <a href="preactivity.html"><button type="button" class="btn btn-primary">Prakegiatan</button></a>
+                        <div class="col-md-3">
+                            <a href="preactivity.html"><button type="button" class="btn btn-primary"><span id="preactivity"></span></button></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <script src="https://kit.fontawesome.com/3bc2e700df.js"></script>
-    <script src="<assets/js/jquery-3.5.1.min.js"></script>
-    <script src="<assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/localize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+
+    <script>
+        function updateContent(translations) {
+            document.getElementById('preactivity').innerText = translations.preactivity;
+            document.getElementById('competencyMap').innerText = translations.competencyMap;
+            document.getElementById('navTitle').innerText = translations.navTitle;
+            document.getElementById('indexTitle').innerText = translations.indexTitle;
+            document.getElementById('home').innerText = translations.home;
+            document.getElementById('introduction').innerText = translations.introduction;
+            document.getElementById('guideline').innerText = translations.guideline;
+            document.getElementById('about').innerText = translations.about;
+        }
+    </script>
 </body>
 
 </html>
