--- a/introduction.html
+++ b/introduction.html
@@ -13,104 +13,104 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <h3 class="mb-0 text-black opacity-9">Bahan Ajar Fonologi</h3>
+        <h3 class="mb-0 text-black opacity-9" id="navTitle"></h3>
         <button class="navbar-toggler" id="solidColor" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="index.html">Beranda</a>
+                    <a class="nav-link text-black" href="index.html" id="home"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="introduction.html">Pendahuluan</a>
+                    <a class="nav-link text-black" href="introduction.html" id="introduction"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="guideline.html">Petunjuk</a>
+                    <a class="nav-link text-black" href="guideline.html" id="guideline"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-black" href="material.html">Materi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black" href="about.html">Tentang</a>
+                    <a class="nav-link text-black" href="about.html" id="about"></a>
                 </li>
             </ul>
         </div>
     </nav>
     <section id="about">
         <div class="container mt-100">
-            <h1 class="text-center">Pendahuluan</h1>
+            <div class="mt-120 pl-0 ml-0">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Pilih Bahasa
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#" onclick="setLanguage('id')"><img class="w-20" src="assets/images/icon/indonesia.png" alt=""> Indonesia</a>
+                      <a class="dropdown-item" href="#" onclick="setLanguage('ko')"><img class="w-20" src="assets/images/icon/south-korea.png" alt=""> Korea</a>
+                    </div>
+                  </div>
+            </div>
+            <h1 class="text-center" id="introductionTitle"></h1>
             <div class="row">
                 <div class="col-md-5 text-center">
-                    <h3 class="text-left">Latar Belakang</h3>
+                    <h3 class="text-left" id="introduction1"></h3>
                     <p align="justify">
-                        &nbsp&nbsp&nbspBahasa Indonesia bagi Penutur Asing (BIPA) saat ini semakin diminati, 
-                        terutama bagi pemelajar dari  Korea yang tertarik dengan kesempatan komunikasi 
-                        luas di Indonesia. Namun, salah satu tantangan bagi pemelajar BIPA asal Korea 
-                        adalah mengatasi perbedaan fonologis antara bahasa Indonesia dan bahasa Korea. 
-                        Sistem bunyi yang berbeda ini meliputi pengucapan konsonan, vokal, dan pola 
-                        intonasi yang mempengaruhi kemampuan pemelajar dalam berbicara Bahasa Indonesia 
-                        secara akurat dan jelas. Untuk membantu mengatasi tantangan ini, dikembangkanlah 
-                        sebuah website bahan ajar fonologi dengan teknik shadowing khusus untuk pembelajar 
-                        BIPA asal Korea. 
-                        <br><br>
-                        &nbsp&nbsp&nbspTeknik shadowing dipilih karena efektivitasnya dalam melatih ketepatan, kecepatan, 
-                        dan intonasi dalam pengucapan bahasa target. Melalui website ini, pemelajar dapat 
-                        mengakses berbagai materi pelafalan kata, kalimat sederhana, kalimat kompleks, 
-                        dan percakapan dalam teks bahasa Indonesia yang dirancang untuk dilatihkan dengan 
-                        teknik shadowing. Panduan yang detail tentang pengucapan konsonan, vokal, dan 
-                        intonasi bahasa Indonesia juga disediakan untuk membantu pemelajar memperbaiki 
-                        kefasihan mereka. Bahan ajar yang dikembangkan juga menyediakan daftar pasangan 
-                        minimal kata yang dapat digunakan pemelajar untuk membedakan bunyi kata yang mirip.   
-                        <br><br>
-                        &nbsp&nbsp&nbspWebsite ini juga menawarkan latihan interaktif yang memberikan umpan balik langsung 
-                        kepada pemelajar, memungkinkan mereka untuk berlatih secara mandiri dan fleksibel 
-                        sesuai dengan kebutuhan masing-masing. Diharapkan dengan adanya sumber belajar ini, 
-                        pemelajar BIPA Korea dapat mengembangkan kemampuan pelafalan secara signifikan.
+                        &nbsp&nbsp&nbsp<span id="introduction2">
+                    </p>
+                    <p align="justify">
+                        &nbsp&nbsp&nbsp<span id="introduction3">   
+                    </p>
+                    <p align="justify">
+                        &nbsp&nbsp&nbsp<span id="introduction4">   
                     </p>
                 </div>
                 <div class="col-md-2"></div>
                 <div class="col-md-5">
-                    <h3>Tujuan</h3>
-                    <p class="mb-10">
-                        Setelah mempelajari modul ini, diharapkan pemelajar dapat:
-                    </p>
+                    <h3 id="introduction5"></h3>
+                    <p class="mb-10" id="introduction6"></p>
                     <ol type="a" class="pl-20">
-                        <li>
-                            Meningkatkan kemampuan fonologis, pemahaman dan produksi bunyi-bunyi 
-                            bahasa Indonesia;
-                        </li>
-                        <li>
-                            memperbaiki pelafalan pemelajar yang tepat dan akurat sesuai dengan 
-                            standar pelafalan bahasa Indonesia;
-                        </li>
-                        <li>
-                            mendorong pemelajar untuk memahami pelafalan dalam percakapan sehari-hari 
-                            melalui penggunaan teknik shadowing yang menarik;
-                        </li>
-                        <li>
-                            membantu pemelajar menghindari kesalahan pengucapan umum yang sering 
-                            dilakukan oleh penutur asing, melalui latihan intensif dengan teknik 
-                            shadowing;
-                        </li>
-                        <li>
-                            membantu pemelajar untuk dapat membedakan makna dari bunyi kata yang 
-                            mirip dengan pasangan minimal kata; dan
-                        </li>
-                        <li>
-                            mengembangkan kemampuan pemelajar untuk belajar secara mandiri 
-                            melalui penggunaan bahan ajar digital yang interaktif dan mudah diakses.
-                        </li>
+                        <li  id="introduction7"></li>
+                        <li  id="introduction8"></li>
+                        <li  id="introduction9"></li>
+                        <li  id="introduction10"></li>
+                        <li  id="introduction11"></li>
+                        <li  id="introduction12"></li>
                     </ol>
                 </div>
             </div>
         </div>
     </section>
 
-    <script src="https://kit.fontawesome.com/3bc2e700df.js"></script>
-    <script src="<assets/js/jquery-3.5.1.min.js"></script>
-    <script src="<assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/localize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+
+    <script>
+        function updateContent(translations) {
+            document.getElementById('navTitle').innerText = translations.navTitle;
+            document.getElementById('home').innerText = translations.home;
+            document.getElementById('introduction').innerText = translations.introduction;
+            document.getElementById('guideline').innerText = translations.guideline;
+            document.getElementById('about').innerText = translations.about;
+            
+            
+            document.getElementById('introductionTitle').innerText = translations.introductionTitle;
+            document.getElementById('introduction1').innerText = translations.introduction1;
+            document.getElementById('introduction2').innerText = translations.introduction2;
+            document.getElementById('introduction3').innerText = translations.introduction3;
+            document.getElementById('introduction4').innerText = translations.introduction4;
+            document.getElementById('introduction5').innerText = translations.introduction5;
+            document.getElementById('introduction6').innerText = translations.introduction6;
+            document.getElementById('introduction7').innerText = translations.introduction7;
+            document.getElementById('introduction8').innerText = translations.introduction8;
+            document.getElementById('introduction9').innerText = translations.introduction9;
+            document.getElementById('introduction10').innerText = translations.introduction10;
+            document.getElementById('introduction11').innerText = translations.introduction11;
+            document.getElementById('introduction12').innerText = translations.introduction12;
+            document.getElementById('introduction13').innerText = translations.introduction13;
+        }
+    </script>
 </body>
 
 </html>
