feat(fonologi): fix audio

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-5 text-center">
                     <h4>Biodata Penulis</h4>
-                    <p>#Ini ceritanya gambar, butuh softcopy pas foto#</p>
+                    <img style="width: 50%; height: auto;" class="mb-20" src="assets/images/Foto Nanda.jpeg" alt="">
                     <p align="justify">Nanda Gultom lahir di Samosir pada tanggal 7 Februari 1998. 
                         Ia menyelesaikan pendidikan sarjana di jurusan Bahasa dan Sastra 
                         Indonesia di Universitas Negeri Medan pada tahun 2020, dan 
