--- a/unit-2.html
+++ b/unit-2.html
@@ -192,9 +192,8 @@
                         <li>Ibuku adalah seorang guru. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act41()"></li>
                         <li>Ayah Budi bekerja di luar negeri. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act42()"></li>
                         <li>Salis pergi ke kebun untuk bertani. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act43()"></li>
-                        <li>Kakak laki-laki ibu adalah seorang pilot. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act44()"></li>
-                        <li>Kakek Rika adalah sipir dan ayahnya seorang supir. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act45()"></li>
-                        <li>Nelayan bekerja di laut dari pagi hingga sore hari. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act46()"></li>
+                        <li>Kakak laki-laki ibuku adalah seorang pilot. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act44()"></li>
+                        <li>Kakek Rika adalah seorang sipir dan ayahnya seorang supir. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act45()"></li>
                     </ol>
                 </div>
                 <div class="mt-20">
@@ -222,10 +221,8 @@
                         <li>Rudi dan Luli akan bertemu guru di hari buruh untuk berdiskusi tentang tugas. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act51()"></li>
                         <li>Ayah Budi yang bekerja di luar negeri, mengirimkan hadiah kepada keluarganya di
                             hari raya karena, tidak bisa pulang. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act52()"></li>
-                        <li>Seorang petani menanam pohon pisang di kebun untuk memenuhi kebutuhan
-                            keluarganya. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act53()"></li>
-                        <li>Setiap hari kakak bekerja 8 jam dalam sehari dan setelah pulang bekerja kakak akan
-                            belajar Bahasa Inggris selama 2 jam. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act54()"></li>
+                        <li>Rika adalah seorang pelayan di restoran dan ayahnya adalah seorang nelayan. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act53()"></li>
+                        <li>Setiap hari kakak bekerja 8 jam dalam sehari dan setelah pulang bekerja dia lanjut belajar di rumah. <img class="w-20 audio-unit" src="assets/images/icon/speaker-filled-audio-tool.png" alt="" onclick="act54()"></li>
                     </ol>
                 </div>
                 <div class="mt-20">
@@ -254,36 +251,40 @@
                         <tbody>
                             <tr>
                                 <td>Anna</td>
-                                <td>: Hai, apa kabar Rudi? Nama saya Anna.</td>
+                                <td>: Hai, apa kabar Lia? Lama tidak bertemu.</td>
                             </tr>
                             <tr>
-                                <td>Rudi</td>
-                                <td>: Hai Anna, Kabar saya baik. Anda bekerja di mana?</td>
+                                <td>Lia</td>
+                                <td>: Hai Anna, Kabar saya baik. Anda bekerja di mana sekarang?</td>
                             </tr>
                             <tr>
                                 <td>Anna</td>
-                                <td>: Saya bekerja sebagai guru di SD Isola. Apa pekerjaan Anda?</td>
+                                <td>: Saya mengajar di SD Isola. Apa pekerjaan Anda?</td>
                             </tr>
                             <tr>
-                                <td>Rudi</td>
-                                <td>: Pekerjaan saya adalah perawat.</td>
+                                <td>Lia</td>
+                                <td>: Sekarang saya adalah seorang perawat.</td>
                             </tr>
                             <tr>
                                 <td>Anna</td>
                                 <td>: Wah, menarik. Di mana Anda bekerja?</td>
                             </tr>
                             <tr>
-                                <td>Rudi</td>
+                                <td>Lia</td>
                                 <td>: Saya bekerja di rumah sakit Kasih Ibu.</td>
                             </tr>
                             <tr>
                                 <td>Anna</td>
-                                <td>: Itu dekat dengan rumah saya.Saya harus pergi sekarang. Sampai jumpa
-                                    Rudi.</td>
+                                <td>: Wah, keren sekali.</td>
                             </tr>
                             <tr>
-                                <td>Rudi</td>
-                                <td>: Sampai jumpa Anna.</td>
+                                <td>Lia</td>
+                                <td>: Anda juga keren. Maaf Anna kereta saya sudah tiba. 
+                                    Saya pergi dulu ya. Sampai jumpa.</td>
+                            </tr>
+                            <tr>
+                                <td>Anna</td>
+                                <td>: Sampai jumpa Lia. Hati-hati.</td>
                             </tr>
                         </tbody>
                     </table>
@@ -345,23 +346,23 @@
 
         // Activity - 4
         function act41(){
-            var music = new Audio('assets/audio/Unit 1/Unit 1.D. 1.m4a');
+            var music = new Audio('assets/audio/Unit 2/Unit 2. D. 1.m4a');
             music.play();
         }
         function act42(){
-            var music = new Audio('assets/audio/Unit 1/Unit 1.D. 2.m4a');
+            var music = new Audio('assets/audio/Unit 2/Unit 2. D. 2.m4a');
             music.play();
         }
         function act43(){
-            var music = new Audio('assets/audio/Unit 1/Unit 1.D. 3.m4a');
+            var music = new Audio('assets/audio/Unit 2/Unit 2. D. 3.m4a');
             music.play();
         }
         function act44(){
-            var music = new Audio('assets/audio/Unit 1/Unit 1.D. 4.m4a');
+            var music = new Audio('assets/audio/Unit 2/Unit 2. D. 4.m4a');
             music.play();
         }
         function act45(){
-            var music = new Audio('assets/audio/Unit 1/Unit 1.D. 5.m4a');
+            var music = new Audio('assets/audio/Unit 2/Unit 2. D. 5.m4a');
             music.play();
         }
 
