--- a/material.html
+++ b/material.html
@@ -48,7 +48,7 @@
                                 <h3 class="card-title">Unit 1 Perkenalan</h3>
                                 <p class="card-text">
                                 <ol type="a" class="px-3">
-                                    <li>Penganalan kosakata sapaan dan perkenalan</li>
+                                    <li>Pengenalan kosakata sapaan dan perkenalan</li>
                                     <br>
                                     <li>Pasangan minimal</li>
                                     <br>
@@ -94,7 +94,7 @@
                                 <h3 class="card-title">Unit 3 Hari dan Tanggal</h3>
                                 <p class="card-text">
                                 <ol type="a" class="px-3">
-                                    <li>Pengalan kosakata hari dan tanggal</li>
+                                    <li>Pengenalan kosakata hari dan tanggal</li>
                                     <br>
                                     <li>Pasangan minimal kata tentang hari dan tanggal</li>
                                     <br>
